[gd_scene load_steps=3 format=3 uid="uid://b0wxnmfknd8yg"]

[ext_resource type="Script" path="res://menu_scenes/LevelEditor/Settings/ItemPermutator/item_permutator.gd" id="1_kok1e"]
[ext_resource type="PackedScene" uid="uid://dq82pxor8quh6" path="res://menu_scenes/LevelEditor/Settings/ItemPermutator/item_permutator_sprite_item.tscn" id="2_0xe6v"]

[node name="ItemPermutator" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(500, 80)
offset_right = 500.0
offset_bottom = 80.0
script = ExtResource("1_kok1e")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 210.0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 6

[node name="ItemPermutatorItem" parent="ScrollContainer/GridContainer" instance=ExtResource("2_0xe6v")]
layout_mode = 2

[node name="ItemPermutatorItem2" parent="ScrollContainer/GridContainer" instance=ExtResource("2_0xe6v")]
layout_mode = 2

[node name="ItemPermutatorItem3" parent="ScrollContainer/GridContainer" instance=ExtResource("2_0xe6v")]
layout_mode = 2

[node name="ItemPermutatorItem4" parent="ScrollContainer/GridContainer" instance=ExtResource("2_0xe6v")]
layout_mode = 2

[node name="ItemPermutatorItem5" parent="ScrollContainer/GridContainer" instance=ExtResource("2_0xe6v")]
layout_mode = 2

[node name="ItemPermutatorItem6" parent="ScrollContainer/GridContainer" instance=ExtResource("2_0xe6v")]
layout_mode = 2

[node name="SelectedNode" type="Node2D" parent="."]

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
